--- a/packages/package-frontend/package.json
+++ b/packages/package-frontend/package.json
@@ -11,15 +11,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "npm run build && now && now alias",
-    "format": "prettier --write 'src/**/*.{css,scss,js,ts,json}'",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "src/**/*.{css,scss,js,ts,json}'": [
-      "prettier --write",
-      "git add"
-    ]
+    "deploy": "npm run build && now && now alias"
   },
   "private": true,
   "dependencies": {
@@ -53,7 +45,6 @@
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "^10.12.0",
     "codelyzer": "^4.5.0",
-    "husky": "^0.14.3",
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.2.0",
@@ -62,10 +53,8 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
-    "lint-staged": "^4.3.0",
     "mkdirp": "^0.5.1",
     "ngx-markdown": "^8.1.0",
-    "prettier": "^1.14.3",
     "protractor": "^5.4.1",
     "rxjs-tslint": "^0.1.5",
     "serve": "^11.1.0",
