--- a/packages/package-commerce/package.json
+++ b/packages/package-commerce/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc && npm run swagger",
-    "start": "ts-node src/index.ts | bunyan",
+    "start": "ts-node src/index.ts",
     "start:production": "node dist/index.js",
     "dev": "npm run swagger && nodemon",
     "swagger": "swaggerGen -c ./swagger.config.json"
@@ -19,20 +19,20 @@
     "@cxcloud/commerce": "^1.0.8",
     "@cxcloud/ct-types": "^0.6.0",
     "body-parser": "^1.18.2",
-    "bunyan": "^1.8.12",
     "config": "^1.27.0",
     "cors": "^2.8.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.2",
-    "express-api-error-handler": "^1.1.0"
+    "express-api-error-handler": "^1.1.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.5",
-    "@types/bunyan": "^1.8.3",
     "@types/config": "0.0.33",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.45",
+    "@types/winston": "^2.4.4",
     "nodemon": "^1.17.1",
     "ts-node": "^3.3.0",
     "typescript-rest": "^1.2.2",
