--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     ]
   },
   "devDependencies": {
+    "@types/winston": "^2.4.4",
     "husky": "^1.3.1",
     "lerna": "^3.10.7",
     "lint-staged": "^8.1.0",
@@ -24,6 +25,7 @@
     "typescript": "3.4.1"
   },
   "dependencies": {
-    "find-config": "^1.0.0"
+    "find-config": "^1.0.0",
+    "winston": "^3.2.1"
   }
 }
