--- a/packages/package-commerce/package.json
+++ b/packages/package-commerce/package.json
@@ -23,8 +23,7 @@
     "cors": "^2.8.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.2",
-    "express-api-error-handler": "^1.1.0",
-    "winston": "^3.2.1"
+    "express-api-error-handler": "^1.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.5",
@@ -32,7 +31,6 @@
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.45",
-    "@types/winston": "^2.4.4",
     "nodemon": "^1.17.1",
     "ts-node": "^3.3.0",
     "typescript-rest": "^1.2.2",
