--- a/packages/package-search/tsconfig.json
+++ b/packages/package-search/tsconfig.json
@@ -8,6 +8,8 @@
     "baseUrl": "./",
     "paths": {},
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   }
 }
