--- a/packages/package-commerce/package.json
+++ b/packages/package-commerce/package.json
@@ -8,7 +8,8 @@
     "start": "ts-node src/index.ts",
     "start:production": "node dist/index.js",
     "dev": "npm run swagger && nodemon",
-    "swagger": "swaggerGen -c ./swagger.config.json"
+    "swagger": "swaggerGen -c ./swagger.config.json",
+    "test": "jest --coverage --coverageDirectory=quality-reports"
   },
   "author": {
     "name": "Nadia Törnroos"
@@ -31,9 +32,12 @@
     "@types/config": "0.0.33",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.37",
-    "@types/node": "^8.0.45",
-    "@types/winston": "^2.4.4",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^8.10.51",
+    "jest": "^24.5.0",
+    "jest-fetch-mock": "^2.1.2",
     "nodemon": "^1.17.1",
+    "ts-jest": "^24.0.0",
     "ts-node": "^3.3.0",
     "typescript-rest": "^1.2.2",
     "typescript-rest-swagger": "0.0.17"
