--- a/packages/package-commerce/tsconfig.json
+++ b/packages/package-commerce/tsconfig.json
@@ -5,11 +5,12 @@
     "lib": ["es2015"],
     "outDir": "./dist",
     "strict": true,
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {},
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "esModuleInterop": true
-  }
+  },
+  "exclude": ["./__tests__/*", "./*.ts"]
 }
