--- a/packages/package-search/package.json
+++ b/packages/package-search/package.json
@@ -1,7 +1,7 @@
 {
   "name": "search",
   "version": "0.1.0",
-  "description": "A CXCloud search microservice",
+  "description": "A CXCloud Search Microservice",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc && npm run swagger",
@@ -10,7 +10,8 @@
     "dev": "npm run swagger && nodemon",
     "swagger": "swaggerGen -c ./swagger.config.json",
     "format": "prettier --write 'src/**/*.ts'",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test": "jest --coverage --coverageDirectory=quality-reports"
   },
   "lint-staged": {
     "src/**/*.ts": [
@@ -47,10 +48,14 @@
     "@types/config": "0.0.33",
     "@types/cors": "^2.8.1",
     "@types/express": "^4.0.37",
-    "@types/node": "^8.0.45",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^8.10.51",
+    "jest": "^24.5.0",
+    "jest-fetch-mock": "^2.1.2",
     "husky": "^0.14.3",
     "lint-staged": "^4.3.0",
     "nodemon": "^1.17.1",
+    "ts-jest": "^24.0.0",
     "prettier": "^1.7.4",
     "ts-node": "^3.3.0",
     "typescript": "^3.3.3333",
