Add tests to Content;

--- a/packages/package-commerce/package.json
+++ b/packages/package-commerce/package.json
@@ -1,7 +1,7 @@
 {
   "name": "commerce",
   "version": "0.1.0",
-  "description": "A CXCloud Microservice",
+  "description": "A CXCloud Commerce Microservice",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc && npm run swagger",
