--- a/packages/package-frontend/package.json
+++ b/packages/package-frontend/package.json
@@ -38,7 +38,7 @@
     "@angular-devkit/build-angular": "^0.12.4",
     "@angular/cli": "7.0.3",
     "@angular/compiler": "7.0.1",
-    "@angular/compiler-cli": "^8.1.1",
+    "@angular/compiler-cli": "7.0.1",
     "@angular/language-service": "7.0.1",
     "@cxcloud/ct-types": "^0.1.6",
     "@types/jasmine": "^2.8.9",
@@ -59,6 +59,7 @@
     "rxjs-tslint": "^0.1.5",
     "serve": "^11.1.0",
     "ts-node": "~3.2.0",
-    "tslint": "^5.11.0"
+    "tslint": "^5.11.0",
+    "typescript": "3.1.3"
   }
 }
