--- a/packages/package-frontend/tsconfig.json
+++ b/packages/package-frontend/tsconfig.json
@@ -11,16 +11,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"]
   },
-  "include": [
-    "./src/**/*",
-    "./node_modules/@cxcloud/ct-types/*"
-  ]
+  "include": ["./src/**/*", "./node_modules/@cxcloud/ct-types/*"]
 }
