--- a/packages/package-frontend/package.json
+++ b/packages/package-frontend/package.json
@@ -8,10 +8,12 @@
     "start": "serve dist/ --single",
     "build": "ng build --prod --build-optimizer --extract-css --configuration=${ENVIRONMENT:-production} && npm run generate-config",
     "generate-config": "ts-node scripts/extract-config.ts",
-    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "npm run build && now && now alias"
+    "deploy": "npm run build && now && now alias",
+    "test": "jest --coverage --coverageDirectory=quality-reports",
+    "test:watch": "npm run test --watch",
+    "test:ci": "npm run test --runInBand"
   },
   "private": true,
   "dependencies": {
@@ -23,6 +25,7 @@
     "@angular/platform-browser": "7.0.1",
     "@angular/platform-browser-dynamic": "7.0.1",
     "@angular/router": "7.0.1",
+    "@types/jest": "^24.0.15",
     "angular2-image-zoom": "^1.2.1",
     "autocomplete.js": "^0.29.0",
     "bulma": "^0.6.1",
@@ -45,14 +48,9 @@
     "@types/jasminewd2": "^2.0.5",
     "@types/node": "^10.12.0",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "^3.2.1",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.2.0",
-    "karma-chrome-launcher": "^2.2.0",
+    "jest": "^24.8.0",
+    "jest-preset-angular": "^7.1.1",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
     "mkdirp": "^0.5.1",
     "ngx-markdown": "^8.1.0",
     "protractor": "^5.4.1",
