--- a/packages/package-commerce/package.json
+++ b/packages/package-commerce/package.json
@@ -24,7 +24,8 @@
     "cors": "^2.8.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.2",
-    "express-api-error-handler": "^1.1.0"
+    "express-api-error-handler": "^1.1.0",
+    "find-config": "^1.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.5",
