--- a/packages/package-search/package.json
+++ b/packages/package-search/package.json
@@ -35,7 +35,9 @@
     "cors": "^2.8.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.2",
-    "express-api-error-handler": "^1.1.0"
+    "express-api-error-handler": "^1.1.0",
+    "find-config": "^1.0.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.16.5",
@@ -44,6 +46,7 @@
     "@types/express": "^4.0.37",
     "@types/jest": "^24.0.11",
     "@types/node": "^8.10.51",
+    "@types/winston": "^2.4.4",
     "jest": "^24.5.0",
     "jest-fetch-mock": "^2.1.2",
     "husky": "^0.14.3",
