--- a/packages/package-content/package.json
+++ b/packages/package-content/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "content",
+  "name": "package-content",
   "version": "0.1.0",
   "description": "A CXCloud Content Microservice",
   "main": "dist/index.js",
