--- a/packages/package-search/package.json
+++ b/packages/package-search/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "search",
+  "name": "package-search",
   "version": "0.1.0",
   "description": "A CXCloud Search Microservice",
   "main": "dist/index.js",
