--- a/packages/package-frontend/scripts/nginx.conf
+++ b/packages/package-frontend/scripts/nginx.conf
@@ -1,27 +1,43 @@
-server {
+user  nginx;
+worker_processes  1;
 
-  listen 80;
-
-  sendfile on;
-
-  default_type application/octet-stream;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 
-  gzip on;
-  gzip_http_version 1.1;
-  gzip_disable      "MSIE [1-6]\.";
-  gzip_min_length   256;
-  gzip_vary         on;
-  gzip_proxied      expired no-cache no-store private auth;
-  gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  gzip_comp_level   9;
+events {
+    worker_connections  1024;
+}
 
 
-  root /usr/share/nginx/html;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
+    log_format main escape=json
+      '{'
+        '"nginx" : {'
+          '"time_local"           : "$time_local",'
+          '"remote_addr"          : "$remote_addr",'
+          '"remote_user"          : "$remote_user",'
+          '"request"              : "$request",'
+          '"status"               : "$status",'
+          '"body_bytes_sent"      : "$body_bytes_sent",'
+          '"request_time"         : "$request_time",'
+          '"http_referrer"        : "$http_referer",'
+          '"http_user_agent"      : "$http_user_agent",'
+          '"http_x_forwarded_for" : "$http_x_forwarded_for"'
+        '}'
+      '}';
 
-  location / {
-    try_files $uri $uri/ /index.html =404;
-  }
+    access_log  /var/log/nginx/access.log  main;
 
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
 }
